--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^15.4.2",
     "react-height": "^2.2.0",
     "react-motion": "^0.4.7",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-text-loop": "^1.1.0",
+    "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
