--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.4"
+    "react-scripts": "^1.1.0"
   },
   "dependencies": {
-    "react": "^15.4.2",
-    "react-collapse": "^2.3.3",
-    "react-dom": "^15.4.2",
-    "react-height": "^2.2.0",
-    "react-motion": "^0.4.7",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-collapse": "^4.0.3",
+    "react-dom": "^16.0.0",
+    "react-height": "^3.0.0",
+    "react-medium-image-zoom": "^3.0.8",
+    "react-motion": "^0.5.2",
     "react-router": "^3.0.0",
     "react-text-loop": "^1.1.0",
     "react-transition-group": "^1.2.1"
