--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.0.0",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.0.0",
+    "react-headroom": "^2.2.2",
     "react-height": "^3.0.0",
     "react-medium-image-zoom": "^3.0.8",
     "react-motion": "^0.5.2",
