--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-accessible-accordion": "^2.2.1",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.0.0",
     "react-headroom": "^2.2.2",
