--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-medium-image-zoom": "^3.0.8",
     "react-motion": "^0.5.2",
     "react-router": "^3.0.0",
+    "react-scroll": "^1.7.7",
     "react-text-loop": "^1.1.0",
     "react-transition-group": "^1.2.1"
   },
