--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-accessible-accordion": "^2.2.1",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.0.0",
+    "react-ga": "^2.4.1",
     "react-headroom": "^2.2.2",
     "react-height": "^3.0.0",
     "react-medium-image-zoom": "^3.0.8",
